[gd_scene load_steps=21 format=3 uid="uid://b00ok4g2p2vql"]

[ext_resource type="Texture2D" uid="uid://hf5y4ic16cqj" path="res://Sprites/Intro/intro - background.jpg" id="1_xm8pn"]
[ext_resource type="Texture2D" uid="uid://jd6systmhxf1" path="res://Sprites/Intro/intro - suelo.png" id="2_2edvn"]
[ext_resource type="SpriteFrames" uid="uid://d1pa1pyf7ou2b" path="res://Animations/mapa_fall_intro.tres" id="3_iq20j"]
[ext_resource type="PackedScene" uid="uid://biluutecl1cej" path="res://Scenes/Experiments/skip_sceen.tscn" id="3_wlutv"]
[ext_resource type="StyleBox" uid="uid://b3tjes2hcm3wx" path="res://Resources/UI_Resources/StyleBoxTrasparent.tres" id="3_x6oit"]
[ext_resource type="Texture2D" uid="uid://cjjoaemhep814" path="res://Sprites/mapa-detalle.png" id="4_q3m1c"]
[ext_resource type="Script" path="res://_Scripts/mapArriveSpot.gd" id="4_u6txa"]
[ext_resource type="Script" path="res://_Scripts/PlayAnimation.gd" id="5_3difv"]
[ext_resource type="Texture2D" uid="uid://chqivoetkgkoj" path="res://Sprites/UI/circulo.png" id="10_fkwv8"]
[ext_resource type="Texture2D" uid="uid://dhx6ness36h5f" path="res://Sprites/logoChicoCirculo.png" id="11_88s5v"]
[ext_resource type="PackedScene" uid="uid://cw3ok8v4p620b" path="res://Scenes/Experiments/squiggling_sprite.tscn" id="12_bs1t8"]
[ext_resource type="PackedScene" uid="uid://bac1ysj2c0bok" path="res://Scenes/Experiments/hand_ui.tscn" id="12_lhlbh"]
[ext_resource type="PackedScene" uid="uid://djhg7jvxtexyl" path="res://Scenes/UI_Scenes/btn_Change_Scene.tscn" id="12_n3dw3"]
[ext_resource type="Texture2D" uid="uid://chilh432yan4s" path="res://Sprites/Intro/squigglingIntro/mapaIntroSQUIG - UI.png" id="13_q1dat"]

[sub_resource type="Animation" id="Animation_klold"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.258547, 0.258547)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_e8t3g"]
resource_name = "map_enter"
length = 3.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.9),
"transitions": PackedFloat32Array(3.73213, 1),
"update": 0,
"values": [-0.0302691, -3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.9),
"transitions": PackedFloat32Array(9, 1),
"update": 0,
"values": [Vector2(0.195, 0.184746), Vector2(20, 20)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../SkipSceen")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_timeout"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smvwa"]
_data = {
"RESET": SubResource("Animation_klold"),
"map_enter": SubResource("Animation_e8t3g")
}

[sub_resource type="Animation" id="Animation_eyv2g"]
resource_name = "Fade_out_logo"
length = 6.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4.4, 6.4),
"transitions": PackedFloat32Array(1, 1.3, 0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 2, 4.4, 6.4),
"transitions": PackedFloat32Array(1, 1.3, 0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playAnimMap"
}]
}

[sub_resource type="Animation" id="Animation_7m1eg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_edlyj"]
_data = {
"Fade_out_logo": SubResource("Animation_eyv2g"),
"RESET": SubResource("Animation_7m1eg")
}

[node name="Mapa_Fall_Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.387
anchor_right = 0.5
anchor_bottom = 0.387
offset_left = -451.0
offset_top = -802.36
offset_right = 451.0
offset_bottom = 801.64
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xm8pn")
expand_mode = 1

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.654
anchor_right = 0.501
anchor_bottom = 0.654
offset_left = -585.72
offset_top = -552.12
offset_right = 584.28
offset_bottom = 602.88
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_2edvn")
expand_mode = 1

[node name="SkipSceen" parent="." instance=ExtResource("3_wlutv")]
wait_time = 5.0
NextScene = "mapa_scroll_intro"
fade_time = 0.5
smoothness = 0.2
color = Color(0.0859375, 0.0898438, 0.144531, 1)

[node name="mapArriveSpot" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.67
anchor_right = 0.5
anchor_bottom = 0.67
offset_top = -0.600037
offset_bottom = -0.600037
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_u6txa")

[node name="MapAnim" type="AnimatedSprite2D" parent="mapArriveSpot"]
position = Vector2(1, -391)
scale = Vector2(1.52533, 1.52533)
sprite_frames = ExtResource("3_iq20j")
animation = &"caida"

[node name="Mapa" type="Sprite2D" parent="mapArriveSpot"]
visible = false
position = Vector2(-24, -229)
scale = Vector2(0.258547, 0.258547)
texture = ExtResource("4_q3m1c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="mapArriveSpot/Mapa"]
libraries = {
"": SubResource("AnimationLibrary_smvwa")
}
script = ExtResource("5_3difv")
animation = "map_enter"

[node name="LOGO" type="Sprite2D" parent="mapArriveSpot"]
clip_children = 2
position = Vector2(0, -607)
scale = Vector2(0.37, 0.37)
texture = ExtResource("10_fkwv8")

[node name="LOGO" type="Sprite2D" parent="mapArriveSpot/LOGO"]
scale = Vector2(0.989189, 0.989189)
texture = ExtResource("10_fkwv8")

[node name="LogoChicoCirculo" type="Sprite2D" parent="mapArriveSpot/LOGO/LOGO"]
scale = Vector2(0.625962, 0.629346)
texture = ExtResource("11_88s5v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="mapArriveSpot/LOGO"]
autoplay = "Fade_out_logo"
libraries = {
"": SubResource("AnimationLibrary_edlyj")
}

[node name="Label" type="Label" parent="mapArriveSpot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -438.0
offset_right = 238.0
offset_bottom = -304.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0351563, 0.09375, 0.09375, 1)
theme_override_font_sizes/font_size = 35
text = "PRESENTA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="handUI" parent="mapArriveSpot" instance=ExtResource("12_lhlbh")]
AnimToPlay = "idle_anim"

[node name="Button" type="Button" parent="mapArriveSpot"]
layout_mode = 0
offset_left = -152.0
offset_top = -119.0
offset_right = 149.0
offset_bottom = 135.0
theme_override_styles/normal = ExtResource("3_x6oit")
theme_override_styles/hover = ExtResource("3_x6oit")
theme_override_styles/pressed = ExtResource("3_x6oit")
theme_override_styles/disabled = ExtResource("3_x6oit")
theme_override_styles/focus = ExtResource("3_x6oit")
flat = true

[node name="SquigglingSprite" parent="mapArriveSpot" instance=ExtResource("12_bs1t8")]
position = Vector2(-14, 56)
scale = Vector2(0.753623, 0.753623)
texture = ExtResource("13_q1dat")
ActiveInBegining = false

[node name="ButtonChangeScene" parent="." instance=ExtResource("12_n3dw3")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 11.0
offset_right = 128.0
offset_bottom = 60.0
grow_horizontal = 1
grow_vertical = 1
text = "Skip"
NextScene = "Map_Screen"

[connection signal="button_down" from="mapArriveSpot/Button" to="mapArriveSpot/MapAnim" method="play" binds= ["agarrado"]]
